Fix layout issues

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -7158,10 +7158,12 @@ header {
   position: relative;
   overflow: hidden;
   height: 22em; }
-  .hero img {
+  .hero picture img,
+  .hero picture source {
     object-fit: cover;
     object-position: top center;
-    width: 100%; }
+    width: 100%;
+    height: 100%; }
   @media (min-width: 740px) {
     .hero {
       height: 26em; } }
