--- a/src/styles/sass/layout/_hero.scss
+++ b/src/styles/sass/layout/_hero.scss
@@ -4,10 +4,14 @@
     overflow: hidden;
     height: 22em;
 
-    img {
-        object-fit: cover;
-        object-position: top center;
-        width: 100%;
+    picture {
+        img,
+        source {
+            object-fit: cover;
+            object-position: top center;
+            width: 100%;
+            height: 100%;
+        }
     }
 
     @media (min-width: $breakpoint-mobile) {
